--- a/DAA-Assignment/DAA-Assignment/DAA-Assignment.csproj
+++ b/DAA-Assignment/DAA-Assignment/DAA-Assignment.csproj
@@ -53,7 +53,10 @@
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
+    <Compile Include="ProgramS.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TestCase.cs" />
+    <Compile Include="TimeSpaceTradeOff.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
